# tram-world-editor

./: CMakeLists.txt  Makefile  README.md  actions.h  benis.cpp  compile_flags.txt  editor.cpp  editor.h  framework_new_version.cpp  language.cpp  language.h  main.cpp  objectlist.cpp  objectlist.h  objectmenu.cpp  objectmenu.h  propertypanel.cpp  propertypanel.h  tram-editor.mk  tram-editor.project  trameditor  viewport.cpp  viewport.h  widgets.h  worldtree.cpp  worldtree.h
libraries/: README.md
src/: init.cpp  main.cpp  tramsdk.cpp
src/editor/: actions.h  editor.cpp  editor.h  language.cpp  language.h  settings.cpp  settings.h
src/editor/objects/: entity.cpp  entity.h  entitygroup.h  entitygroupmanager.h  lightgraph.cpp  lightgraph.h  navmesh.cpp  navmesh.h  navmeshmanager.h  path.cpp  path.h  pathmanager.h  soundgraph.cpp  soundgraph.h  transition.cpp  transition.h  transitionmanager.h  world.cpp  world.h  worldcell.cpp  worldcell.h  worldcellmanager.cpp  worldcellmanager.h
src/widgets/: dialogs.cpp  dialogs.h  mainframe.cpp  mainframe.h  objectlist.cpp  objectlist.h  objectmenu.cpp  objectmenu.h  propertypanel.cpp  propertypanel.h  signaleditor.cpp  signaleditor.h  viewport.cpp  viewport.h  worldtree.cpp  worldtree.h
